# dz-vehicles

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docker/nginx/: default.conf
dz_vehicles/: .route.py.swp  __init__.py  db.py  route.py
dz_vehicles/static/css/: .index.css.swp
dz_vehicles/templates/: add-vehicle.html
tests/: test_lock_submit.py
vehicles/: __init__.py  db.py  schema.sql
vehicles/routes/: __init__.py  auth.py  gas_card.py  home.py  lock.py  record.py  registration.py  vehicle.py
vehicles/static/css/: global.css  index.css
vehicles/static/css/home/: index.css
vehicles/templates/: base.html  lock_password.html
vehicles/templates/auth/: audit.html  identification.html  login.html  register.html
vehicles/templates/gas_card/: manage.html
vehicles/templates/home/: index.html
vehicles/templates/lock/: password.html  return.html
vehicles/templates/record/: gas.html  vehicle.html
vehicles/templates/registration/: add-vehicle.html  index.html
vehicles/templates/vehicle/: manage.html
